2001-09-20  Michael Yount <csf@moscow.com>

	* lib/mj_cf_defs.pl, lib/mj_cf_data.pl:  add support for
	the attachment_filters configuration setting.

	* lib/Mj/Config.pm:  (parse_attachment_filters)  New routine.
	Parse the attachment_filters configuration setting.

	* lib/Mj/Resend.pm:  (_post)  Use the attachment_filters
	setting to determine how messages should be altered.

2001-09-19  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Bugfix:  use str_to_offset to determine
	the length of a delay.

	* lib/Majordomo.pm:  (_report)  Use Mj::Util::str_to_offset()
	to determine the time period for a report.

	* lib/mj_cf_data.pl:  support the "quarterly" option for
	the archive_split setting.

	* lib/Mj/Access.pm:  (list_access_check)  Remove unneeded 
	support for the check_main condition.
	(_a_delay)  Use Mj::Util::str_to_offset() to determine a
	delay.

	* lib/Mj/Archive.pm:  (_secs_start, _secs_end)  Treat
	a five-digit number, such as 20012, as an indication of
	a quarter-year instead of a month.
	(expand_range)  Use Mj::Util::str_to_offset().

	* lib/Mj/Config.pm:  (_str_to_offset)  Move to Mj::Util.
	(parse_limits)  Bugfix:  make a leading digit in a
	time span optional.

	* lib/Mj/Parser.pm:  (parse_part)  use Mj::Util::str_to_offset().

	* lib/Mj/Util.pm:  (str_to_offset)  Rename
	Mj::Config::_str_to_offset.
	(str_to_time)  Call str_to_offset() for syntax consistency.
	
2001-09-18  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_archive)  Add support for the "subject,"
	"author," "date," and "thread" command modes, which sort the results 
	accordingly, and the "reverse" command mode, which reverses the 
	order of the results.
	(_digest)  Use the whoami_owner setting instead of the sender
	setting in the From: address of digests.
	The version number is now 0.1200109180.
	(connect)  Do not display the password provided in an Approved
	header.
	(gen_cmdline)  Display "PASSWORD" in place of a new password
	in the command line.
